--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/perro.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Control de Citas</title>
+  <title>AgendaPet | Organiza y Simplifica las Citas Veterinarias para tus Mascotas</title>
 </head>
 
 <body>
