--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>AgendaPet | Organiza y Simplifica las Citas Veterinarias para tus Mascotas</title>
 </head>
 
-<body>
+<body class="bg-indigo-50 h-screen">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
